<resources>
    <string name="app_name">TravelEasily</string>
    <string name="action_settings">Settings</string>
    <string name="home_title_TravelEasily">TravelEasily </string>
    <string name="home_btnTour">Tour</string>
    <string name="home_btnMap">Map</string>
    <string name="tourPage_title_Tour">Tours</string>
    <string name="tourPage_btnNew">+</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="edit">Edit</string>
    <string name="information">Information</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="airlineBus">Transportation</string>
    <string name="dateFrom">Date From</string>
    <string name="dateTo">Date To</string>
    <string name="note">Note</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete </string>
    <string name="deleteItem">Delete %1$d tour(s)?</string>
    <string name="deleteBudget">Dekete %1$d budget(s)? </string>
    <string name="addExpense">+Expense</string>
    <string name="addIncome">+Income</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="budget">Budget</string>
    <string name="budgetBalance">Balance</string>
    <string name="places">Places</string>


    <string name="placeName">Place:</string>
    <string name="address">Address:</string>
    <string name="phoneNumber">Phone:</string>
    <string name="website">Website:</string>
    <string name="photo">Photo:</string>
</resources>
