<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TourPage">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_item"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_item"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>