<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.julia.traveleasily.AddBudget">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvBudgetItem"
            android:text="@string/item"
            android:textSize="24dp"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvBudgetAmount"
            android:text="@string/amount"
            android:textSize="24dp"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBudgetAmount"
            android:layout_row="1"
            android:layout_column="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvBudgetCategory"
            android:text="@string/category"
            android:textSize="24dp"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBudgetCategory"
            android:layout_row="2"
            android:layout_column="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvBudgetDate"
            android:text="@string/date"
            android:textSize="24dp"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBudgetDate"
            android:layout_row="3"
            android:layout_column="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvBudgetNote"
            android:text="@string/note"
            android:textSize="24dp"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBudgetItem"
            android:layout_row="0"
            android:layout_column="10" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBudgetNote"
            android:layout_row="4"
            android:layout_column="10" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnBudgetCancel"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="onSubmitBudget"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/btnBudgetDone"
            android:layout_row="3"
            android:layout_column="4"
            android:onClick="onSubmitBudget"/>

    </GridLayout>
</RelativeLayout>
