<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.julia.traveleasily.budgetPage">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Income"
            android:textSize="24dp"
            android:textColor="@color/textForBudget"
            android:id="@+id/txvIncome"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expense"
            android:textSize="24dp"
            android:textColor="@color/textForBudget"
            android:id="@+id/txvExpense"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Income"
            android:textSize="24dp"
            android:textColor="@color/textForBudget"
            android:id="@+id/txvBalance"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/txvExpenseRes"
            android:background="@color/gray_blue"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/txvIncomeRes"
            android:background="@color/gray_blue"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addExpense"
            android:id="@+id/btnAddExpense"
            android:layout_alignBottom="@+id/budgestListView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="addBudgetExpense"
            android:layout_row="1"
            android:layout_column="12" />
    </GridLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:dividerHeight="1sp"
        android:background="@color/gray_blue"
        android:divider="@color/divider_color"
        android:id="@+id/budgestListView"
        android:layout_below="@+id/gridLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/btnBudgetDone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="budgetDOne"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnBudgetDel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="deleteBudget"/>
</RelativeLayout>
